--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,4 +1,5 @@
 <h1>List of Posts</h1>
+<div id="fake_name"></div>
 <p id="notice"><%= notice %></p>
 <%= turbo_stream_from "posts" %>
 <%= turbo_frame_tag "posts" do %>
